[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
bitcoincash-addr = "0.5"
rand = "0.8"
merkle-cbt = "0.3"
serde = { version = "1.0", default_features = false, features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ripemd = "0.1"
